// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers/Match/StadiumTooltip render with no image if not provided 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "display": "flex",
        "justifyContent": "space-around",
        "textShadow": "0 1px 0 rgba(0,0,0,.2)",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Stade Krestovski
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      •
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Saint-Pétersbourg
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
        "display": "flex",
        "justifyContent": "space-around",
        "textShadow": "0 1px 0 rgba(0,0,0,.2)",
      }
    }
  >
    <div>
      Capacité
    </div>
    <div>
      69500
       places
    </div>
  </div>
</div>
`;

exports[`Containers/Match/StadiumTooltip renders correctly 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "display": "flex",
        "justifyContent": "space-around",
        "textShadow": "0 1px 0 rgba(0,0,0,.2)",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Stade Krestovski
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      •
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Saint-Pétersbourg
    </div>
  </div>
  <img
    alt="Stade Krestovski"
    src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/RUS-2016-Aerial-SPB-Krestovsky_Stadium_02.jpg/512px-RUS-2016-Aerial-SPB-Krestovsky_Stadium_02.jpg"
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "color": "white",
        "display": "flex",
        "justifyContent": "space-around",
        "textShadow": "0 1px 0 rgba(0,0,0,.2)",
      }
    }
  >
    <div>
      Capacité
    </div>
    <div>
      69500
       places
    </div>
  </div>
</div>
`;
